--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li><a href="#research">Summary</a></li>
                 <li><a href="#members">Members</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="/pages/codes.html">Codes(another page)</a></li>
+                <li><a href="/codoner.github.io/pages/codes.html">Codes(anotherpage)</a></li>
             </ul>
         </nav>
     </header>
