modify some links

--- a/pages/codes.html
+++ b/pages/codes.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Codoner -codes-</title>
+    <link rel="stylesheet" href="src/css/codes.css">
+    <script>
+        (function(d) {
+          var config = {
+            kitId: 'soc1zuz',
+            scriptTimeout: 3000,
+            async: true
+          },
+          h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+        })(document);
+      </script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-06F4HF8N7W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-06F4HF8N7W');
+</script>
 <body>
-    <p>Hello World</p>
-</body>
-</html>
+    <header>
+        <div class="header-left">
+            <div class="header-text">
+                <h1>Codoner</h1>
+                <p class="project-description">Codon + Encoder = Codon + Protector</p>
+            </div>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#research">Summary</a></li>
+                <li><a href="#members">Members</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="/codoner.github.io/pages/codes.html">Codes(anotherpage)</a></li>
+            </ul>
+        </nav>
+    </header>
