--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codoner</title>
+    <title>Codoner -home-</title>
     <link rel="stylesheet" href="src/css/home_style.css">
     <script>
         (function(d) {
