--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <section id="members">
             <h2>Members</h2>
-            <p>現在、中3 : 3, 高1 : 1, 高専4年 : 1</p>
+            <p>現在、中3 : 3, 高1 : 1, 高専 : 1</p>
             <table border="2">
                 <tr>
                     <th>name</th>
@@ -73,9 +73,16 @@
                 <tr>
                     <td id="klee">みずは</td>
                     <td>中3</td>
-                    <td>発案者</td>
+                    <td>発案者 / Admin</td>
                     <td><a href="https://github.com/citrus-mizuha" id="link">citrus_mizuha</a></td>
                     <td><a href="https://x.com/mizuha_python" id="link">mizuha_python</a></td>
+                </tr>
+                <tr>
+                    <td>KOUTA</td>
+                    <td>高専</td>
+                    <td>engineer (Python)</td>
+                    <td><a href="https://github.com/koutamanto" id="link">koutamanto</a></td>
+                    <td>-</td>
                 </tr>
                 <tr>
                     <td>pik6c</td>
@@ -83,6 +90,13 @@
                     <td>Ruster</td>
                     <td><a href="https://github.com/pik6c" id="link">pik6c</a></td>
                     <td><a href="https://x.com/pik6_c" id="link">pik6_c</a></td>
+                </tr>
+                <tr>
+                    <td>ねにあ</td>
+                    <td>中3</td>
+                    <td>Security moderator</td>
+                    <td><a href="https://github.com/Nenia-dayo" id="link">Nenia-dayo</a></td>
+                    <td><a href="https://x.com/Nenia_da" id="link">Nenia_da</a></td>
                 </tr>
             </table>
         </section>
