--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codoner -home-</title>
+    <link rel=”icon” href=“src/img/favicon.ico”>
     <link rel="stylesheet" href="src/css/home_style.css">
     <script>
         (function(d) {
