Changed some designs

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/">
+    <meta property="og:url" content="https://citrus-mizuha.github.io/codoner.github.io/"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Codoner - home -"/>
+    <meta property="og:description" content="システム上で使用する暗号化システムに、mRNAコドンの仕組みを応用する研究 'Codoner' のホームページです" />
+    <meta property="og:site_name" content="Codoner" />
+    <meta property="og:image" content="https://citrus-mizuha.github.io/codoner.github.io/src/img/ogp.png" />
+    <meta name="twitter:card" content="summary_large_image">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codoner -home-</title>
@@ -52,6 +59,7 @@
             <p>現在 (2024/7/12)、6名の学生が当プロジェクトには参加しています</p>
             <p>興味がある方がいらっしゃいましたら、開発チームへと招待させていただきますので、是非、<a href="https://x.com/mizuha_python" id="link">X (Twitter)</a>, <a href="https://discord.com/users/1237388614313443338" id="link">Discord</a>, あるいは<a href="mailto:citrus.mizuha@outlook.jp" id="link">Mail (citrus.mizuha@outlook.jp)</a> に、一声おかけください。</p>
             <p>特に、<span style="color: rgb(9, 24, 160);">暗号学</span>に精通している方のご参加、お待ちしております！</p>
+            <p id="repository">Github repository : <a href="https://github.com/citrus-mizuha/codoner" id="link">Codoner</a></p>
         </section>
 
         <section id="summary">
@@ -74,21 +82,28 @@
                 <tr>
                     <td id="klee">みずは</td>
                     <td>中3</td>
-                    <td>発案者 / Admin</td>
+                    <td>originator (Pythoner)</td>
                     <td><a href="https://github.com/citrus-mizuha" id="link">citrus_mizuha</a></td>
                     <td><a href="https://x.com/mizuha_python" id="link">mizuha_python</a></td>
                 </tr>
                 <tr>
                     <td>KOUTA</td>
                     <td>高専</td>
-                    <td>engineer (Python)</td>
+                    <td>engineer (Pythoner)</td>
                     <td><a href="https://github.com/koutamanto" id="link">koutamanto</a></td>
                     <td>-</td>
                 </tr>
                 <tr>
+                    <td>kimuti_tsukai</td>
+                    <td>高1</td>
+                    <td>Rustacean & Pythoner</td>
+                    <td><a href="https://github.com/kimuti-tsukai" id="link">kimuti-tsukai</a></td>
+                    <td><a href="https://x.com/kimuchi_tsukai" id="link"></a></td>
+                </tr>
+                <tr>
                     <td>pik6c</td>
                     <td>中3</td>
-                    <td>Ruster</td>
+                    <td>Rustacean</td>
                     <td><a href="https://github.com/pik6c" id="link">pik6c</a></td>
                     <td><a href="https://x.com/pik6_c" id="link">pik6_c</a></td>
                 </tr>
@@ -103,6 +118,7 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
+            <p id=>Originator (mizuha)<br>mail : <a href="mailto:citrus.mizuha@outlook.jp" id="link">citrus.mizuha@outlook.jp</a></p>
         </section>
     </main>
     <footer>
