--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <li><a href="#research">Summary</a></li>
                 <li><a href="#members">Members</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="/codoner.github.io/pages/codes.html">Codes(anotherpage)</a></li>
+                <li><a href="/codoner.github.io/pages/codes.html">Codes</a></li>
             </ul>
         </nav>
     </header>
