--- a/index.html
+++ b/index.html
@@ -36,10 +36,13 @@
 <body>
     <header>
         <div class="header-left">
-            <div class="header-text">
-                <h1>Codoner</h1>
-                <p class="project-description">Codon + Encoder = Codon + Protector</p>
-            </div>
+            <a href=# id="logo">
+                <div class="header-text">
+                    <h1>Codoner</h1>
+                    <p class="project-description">Codon + Encoder = Codon + Protector</p>
+                </div>
+            </a>
+            
         </div>
         <nav>
             <ul>
