Designed menu bar

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#research">Summary</a></li>
-                <li><a href="#members">Members</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="/codoner.github.io/pages/codes.html">Codes</a></li>
+                <li><a href="#about" id="menu">About</a></li>
+                <li><a href="#research" id="menu">Summary</a></li>
+                <li><a href="#members" id="menu">Members</a></li>
+                <li><a href="#contact" id="menu">Contact</a></li>
+                <li><a href="/codoner.github.io/pages/codes.html" id="menu">Codes</a></li>
             </ul>
         </nav>
     </header>
