--- a/index.html
+++ b/index.html
@@ -97,10 +97,7 @@
             <h3>研究概要</h3>
             <p>当研究は、DNAの仕組みを応用すれば、コドン表の項目にて明記した通り、外的破壊や改ざんに対する耐性を暗号化方法自体に持たせることが可能なのではないか、という仮説のもと行う</p>
             
-            <h4>仕組み(イメージ)</h4>
-            
-            <h4>結果的な流れ</h4>
-            <ol>
+            <h4>流れのイメージ</h4> 
                 <li>データを2進数に変換</li>
                 <li>2進数データを4bit区切りにして10進数に変換</li>
                 <li>セッションごとに「コドン表」(codon_0)を作成、使用して疑似4進数に変換</li>
