repair kimuti's link

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <td>高1</td>
                     <td>Rustacean & Pythoner</td>
                     <td><a href="https://github.com/kimuti-tsukai" id="link">kimuti-tsukai</a></td>
-                    <td><a href="https://x.com/kimuchi_tsukai" id="link"></a></td>
+                    <td><a href="https://x.com/kimuchi_tsukai" id="link">kimuti_tsukai</a></td>
                 </tr>
                 <tr>
                     <td>pik6c</td>
