--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li><a href="#research" id="menu">Summary</a></li>
                 <li><a href="#members" id="menu">Members</a></li>
                 <li><a href="#contact" id="menu">Contact</a></li>
-                <li><a href="codoner.github.io/codes.html" id="menu">Codes</a></li>
+                <li><a href="codes.html" id="menu">Codes</a></li>
             </ul>
         </nav>
     </header>
