added Meta description to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/">
+    <meta name="description" content="システム上で使用する暗号化システムに、mRNAコドンの仕組みを応用する研究 'Codoner' のホームページです">
     <meta property="og:url" content="https://citrus-mizuha.github.io/codoner.github.io/"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Codoner - home -"/>
