--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/">
+    <meta name="description" content="システム上で使用する暗号化システムに、mRNAコドンの仕組みを応用する研究 'Codoner' のホームページです">
     <meta property="og:url" content="https://citrus-mizuha.github.io/codoner.github.io/"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Codoner - home -"/>
@@ -50,7 +51,7 @@
                 <li><a href="#research" id="menu">Summary</a></li>
                 <li><a href="#members" id="menu">Members</a></li>
                 <li><a href="#contact" id="menu">Contact</a></li>
-                <li><a href="codoner.github.io/codes.html" id="menu">Codes</a></li>
+                <li><a href="codes.html" id="menu">Codes</a></li>
             </ul>
         </nav>
     </header>
