--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="ja">
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/">
     <meta name="description" content="システム上で使用する暗号化システムに、mRNAコドンの仕組みを応用する研究 'Codoner' のホームページです">
     <meta property="og:url" content="https://citrus-mizuha.github.io/codoner.github.io/"/>
