--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:image" content="https://citrus-mizuha.github.io/codoner.github.io/src/img/ogp.png" />
     <meta name="twitter:card" content="summary_large_image">
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'none'">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codoner -home-</title>
     <link rel=”icon” href=“src/img/favicon.ico”>
