--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'none'">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codoner -home-</title>
-    <link rel=”icon” href=“src/img/favicon.ico”>
+    <link rel="icon" href="src/img/favicon.ico">
     <link rel="stylesheet" href="src/css/home_style.css">
     <script>
         (function(d) {
